fix modal z-index value to appear above all components

--- a/style/scss/modules/_react-dyn-tabs.scss
+++ b/style/scss/modules/_react-dyn-tabs.scss
@@ -234,6 +234,7 @@
   visibility: visible;
   display: flex;
   opacity: 1;
+  z-index: 2147483647 !important;
 }
 
 .rc-dyn-tabs-modal__content {
